--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -31,9 +31,21 @@ jobs:
       - name: make test
         run: make test
 
-  linux:
-    name: "linux ${{ matrix.perl-version }}"
+  perl-versions:
+    runs-on: ubuntu-latest
     needs: [ubuntu]
+    name: List Perl versions
+    outputs:
+      perl-versions: ${{ steps.action.outputs.perl-versions }}
+    steps:
+      - id: action
+        uses: perl-actions/perl-versions@v1
+        with:
+          since-perl: v5.10
+          with-devel: true
+  linux:
+    name: "Perl ${{ matrix.perl-version }}"
+    needs: [perl-versions]
     runs-on: ubuntu-latest
 
     env:
@@ -44,25 +56,11 @@ jobs:
       PERL_CARTON_PATH: $GITHUB_WORKSPACE/local
 
     strategy:
+      fail-fast: false
       matrix:
-        perl-version:
-          - "latest"
-          - "5.32"
-          - "5.30"
-          - "5.28"
-          - "5.26"
-          - "5.24"
-          - "5.22"
-          - "5.20"
-          - "5.18"
-          - "5.16"
-          - "5.14"
-          - "5.12"
-          - "5.10"
-          - "5.8"
-
-    container:
-      image: perl:${{ matrix.perl-version }}
+        perl-version: ${{ fromJson (needs.perl-versions.outputs.perl-versions) }}
+  
+    container: perldocker/perl-tester:${{ matrix.perl-version }}
 
     steps:
       - uses: actions/checkout@v2
@@ -78,7 +76,7 @@ jobs:
       - run: make test
 
   macOS:
-    needs: [ubuntu, linux]
+    needs: [ubuntu, linux, windows]
     runs-on: macOS-latest
 
     env:
@@ -104,7 +102,7 @@ jobs:
       - run: make test
 
   windows:
-    needs: [ubuntu]
+    needs: [ubuntu, linux]
     runs-on: windows-latest
 
     steps:
